# cuda-fast-voxel-traversal

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
data/: test.pcd
include/: voxel_traversal.cuh
python/: main.py  test_pybind.py
src/: voxel_traversal.cpp  voxel_traversal.cu  voxel_traversal.hpp
